            invader-item-destroyer.lua
                destroys invaders' items when they die
            moddable-gods.lua
                standardized version of Putnam's moddable gods script
            moddableGods.lua
                makes raw moddable gods possible
            projectileExpansion.lua
                adds extra functionality to projectiles
            reaction-trigger.lua
                trigger commands when custom reactions complete
                replaces autoSyndrome
            reaction-trigger-transition.lua
                a tool for converting mods from autoSyndrome to reaction-trigger
            scripts/skillroll.lua
                invokes dfhack commands based on random chances
            syndrome-trigger.lua
                trigger commands when syndromes happen
            transform-unit.lua
                shapeshifts a unit, possibly permanently

    New commands:

    New tweaks:

    New plugins:

    Misc improvements:
        new script in utils.lua for standardized argument processing
        outside-only
            now buildings have to be registered as inside or outside only, and it checks periodically to see when buildings change outsideness
            converted from plugin to script

    Removed
        digmat.rb: digFlood does the same functionality with less FPS impact
        scripts/invasionNow: scripts/modtools/force.lua does it better
        autoSyndrome replaced with scripts/modtools/reaction-trigger.lua
        syndromeTrigger replaced with scripts/modtools/syndrome-trigger.lua
        devel/printArgs plugin converted to scripts/devel/printArgs.lua

DFHack v0.34.11-r5

  Internals:
    - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
    - support for basic filesystem operations (e.g. chdir, mkdir, rmdir, stat) in C++ and Lua
    - Lua API for listing files in directory. Needed for mod-manager.